# telegram_grep

./: .gitignore  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  ci.yml
src/telegram_grep/: __init__.py  __main__.py  cli.py  config.py  core.py  formatting.py  models.py  telethon_backend.py
tests/: test_cli.py  test_config.py  test_core.py  test_formatting.py
