[build-system]
requires = ['hatchling>=1.28', 'hatch-vcs>=0.5']
build-backend = 'hatchling.build'

[project]
name = 'telegram-grep'
dynamic = ['version']
description = 'Search Telegram private chats from the command line.'
readme = 'README.md'
requires-python = '>=3.11'
license = 'MIT'
authors = [
	{ name = 'Vitaly Zdanevich' },
]
keywords = ['telegram', 'mtproto', 'grep', 'cli', 'telethon']
classifiers = [
	'Development Status :: 3 - Alpha',
	'Environment :: Console',
	'Intended Audience :: End Users/Desktop',
	'License :: OSI Approved :: MIT License',
	'Programming Language :: Python :: 3',
	'Programming Language :: Python :: 3.11',
	'Programming Language :: Python :: 3.12',
	'Programming Language :: Python :: 3.13',
	'Typing :: Typed',
]
dependencies = [
	'Telethon>=1.41,<2',
]

[project.optional-dependencies]
dev = [
	'mypy>=1.18',
	'pytest>=8.4',
	'ruff>=0.14',
]

[project.scripts]
telegram-grep = 'telegram_grep.cli:main'

[project.urls]
Homepage = 'https://github.com/vitaly-zdanevich/telegram_grep'
Repository = 'https://github.com/vitaly-zdanevich/telegram_grep'
Issues = 'https://github.com/vitaly-zdanevich/telegram_grep/issues'

[tool.hatch.build.targets.wheel]
packages = ['src/telegram_grep']

[tool.hatch.version]
source = 'vcs'

[tool.hatch.version.raw-options]
fallback_version = '0.1.0'
local_scheme = 'no-local-version'
version_scheme = 'guess-next-dev'

[tool.ruff]
line-length = 100
target-version = 'py311'

[tool.ruff.lint]
select = ['B', 'E', 'F', 'I', 'SIM', 'UP']

[tool.ruff.format]
quote-style = 'single'
indent-style = 'tab'

[tool.mypy]
python_version = '3.11'
strict = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = ['telethon', 'telethon.*']
ignore_missing_imports = true
